--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -1,4 +1,10 @@
+<!--
 
+    TODO :: CREATE MODAL TO SHOW PROJECT'S DEATILS WHEN CLICK ON EACH PROJECT
+
+    TODO :: FORM TO CREATE PROJECT IN MODAL
+
+ -->
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
     <head>
@@ -531,6 +537,7 @@
                     ).toString()
                 );
                 progressCircle.setAttribute("data-type", "percent");
+
                 dFlexInner.appendChild(img);
                 dFlexInner.appendChild(h5);
                 dFlexBetween.appendChild(dFlexInner);
@@ -1297,7 +1304,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <h5 class="modal-title" id="staticBackdropLabel">
-                            Project Details
+                            Department Details
                         </h5>
                         <button
                             type="button"
