--- a/src/main/resources/templates/employees.html
+++ b/src/main/resources/templates/employees.html
@@ -36,7 +36,19 @@
                 <a href="" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addEmployeeModal">Add Employee</a>
                 <!--open modal to register employee account-->
             </div>
-            <table class="border border-primary" id="table" data-toggle="table" data-toolbar="#toolbar" data-toolbar-align="right" data-search="true" data-header-style="headerStyle" data-url="/api/user/list">
+            <table
+                    class="border border-primary"
+                    id="table"
+                    data-toggle="table"
+                    data-toolbar="#toolbar"
+                    data-toolbar-align="right"
+                    data-search="true"
+                    data-header-style="headerStyle"
+                    data-url="/api/user/list"
+                    data-pagination="true"
+                    data-page-size="5"
+                    data-page-list="[5, 10, 20, 50, 100, 200]"
+            >
                 <thead class="thead-dark text-center text-white font-weight-bold text-uppercase bg-primary rounded shadow-sm p-3 mb-5">
                 <tr>
                     <th data-sortable="true" data-formatter="indexFormatter" data-align="left" data-valign="middle" data-width="100" >No.</th>
@@ -146,7 +158,7 @@
 
         function departmentNameFormatter(value,row,index){
             if (value === null) {
-                return '';
+                return '-';
             }
             return value.name;
         }
