--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -24,41 +24,6 @@
                         class="bi bi-search d-md-none d-block d-sm-block fs-4"
                         id="drop-down-search-btn"
                     ></i>
-
-                    <div class="nav-item dropdown">
-                        <a
-                            href="#"
-                            class="nav-link dropdown-toggle"
-                            data-bs-toggle="dropdown"
-                        >
-                            <i class="fa fa-envelope me-lg-2"></i>
-                            <span class="d-none d-lg-inline-flex">Message</span>
-                        </a>
-                        <div
-                            class="dropdown-menu dropdown-menu-end bg-light border-0 rounded-0 rounded-bottom m-0"
-                        >
-                            <a href="#" class="dropdown-item">
-                                <div class="d-flex align-items-center">
-                                    <img
-                                        class="rounded-circle"
-                                        src="https://source.unsplash.com/random/200x200?sig=1"
-                                        alt
-                                        style="width: 40px; height: 40px"
-                                    />
-                                    <div class="ms-2">
-                                        <h6 class="fw-normal mb-0">
-                                            Jhon send you a message
-                                        </h6>
-                                        <small>15 minutes ago</small>
-                                    </div>
-                                </div>
-                            </a>
-                            <hr class="dropdown-divider" />
-                            <a href="#" class="dropdown-item text-center"
-                                >See all message</a
-                            >
-                        </div>
-                    </div>
                     <div class="nav-item dropdown">
                         <a
                             href="#"
@@ -117,9 +82,9 @@
                             data-bs-toggle="dropdown"
                         >
                             <img
-                                class="rounded-circle"
-                                src="https://source.unsplash.com/random/200x200?sig=1"
-                                alt
+                                class="rounded-circle avatar-nav"
+                                src=""
+                                alt="avatar"
                                 style="width: 40px; height: 40px"
                             />
                             <span class="d-none d-lg-inline-flex"
@@ -156,40 +121,6 @@
                     <i class="fa fa-bars"></i>
                 </a>
                 <div class="navbar-nav align-items-center ms-auto">
-                    <div class="nav-item dropdown">
-                        <a
-                            href="#"
-                            class="nav-link dropdown-toggle"
-                            data-bs-toggle="dropdown"
-                        >
-                            <i class="fa fa-envelope me-lg-2"></i>
-                            <span class="d-none d-lg-inline-flex">Message</span>
-                        </a>
-                        <div
-                            class="dropdown-menu dropdown-menu-end bg-light border-0 rounded-0 rounded-bottom m-0"
-                        >
-                            <a href="#" class="dropdown-item">
-                                <div class="d-flex align-items-center">
-                                    <img
-                                        class="rounded-circle"
-                                        src="https://source.unsplash.com/random/200x200?sig=1"
-                                        alt
-                                        style="width: 40px; height: 40px"
-                                    />
-                                    <div class="ms-2">
-                                        <h6 class="fw-normal mb-0">
-                                            Jhon send you a message
-                                        </h6>
-                                        <small>15 minutes ago</small>
-                                    </div>
-                                </div>
-                            </a>
-                            <hr class="dropdown-divider" />
-                            <a href="#" class="dropdown-item text-center"
-                                >See all message</a
-                            >
-                        </div>
-                    </div>
                     <div class="nav-item dropdown">
                         <a
                             href="#"
@@ -249,8 +180,8 @@
                             data-bs-toggle="dropdown"
                         >
                             <img
-                                class="rounded-circle"
-                                src="https://source.unsplash.com/random/200x200?sig=1"
+                                class="rounded-circle avatar-nav"
+                                src=""
                                 alt
                                 style="width: 40px; height: 40px"
                             />
