--- a/src/main/resources/templates/issue.html
+++ b/src/main/resources/templates/issue.html
@@ -165,10 +165,19 @@
                             </select>
                         </div>
 
+
                         <div class="col-lg-6">
                             <label for="user_pic" class="col-sm-12 col-form-label" name="user_pic">Person In Charge <span
                                     style="color:red"> *</span></label>
-                            <select class="form-select border-task-description" data-live-search="true" aria-label="Select Clients"  id="user_pic" name="user_pic" >
+                            <select class="form-select border-task-description" data-live-search="true" aria-label="Select PIC"  id="user_pic" name="user_pic" >
+
+                            </select>
+                        </div>
+
+                        <div class="col-lg-6">
+                            <label for="client" class="col-sm-12 col-form-label" name="client">Client <span
+                                    style="color:red"> *</span></label>
+                            <select class="form-select border-task-description" data-live-search="true" aria-label="Select Clients"  id="client" name="client" >
 
                             </select>
                         </div>
@@ -249,8 +258,6 @@
 
 <!-- jquery -->
 <script src="/js/jquery.3.7.1.min.js"></script>
-
-
 
 
 <!-- datable table -->
@@ -367,27 +374,48 @@
 
 
         // Define data variable to store user data
-        let data = [];
+        // let data = [];
+        //
+        //  $.get('api/user/list', function (userData) {
+        //                     data = userData; // Set the data array with the retrieved user data
+        //
+        //                     const user_pic = $('#user_pic');
+        //                     user_pic.empty();
+        //                     user_pic.append($('<option>', {
+        //                         value: '',
+        //                         text: 'Select a User',
+        //                         data: {picUrl: ''}, // Empty URL for placeholder
+        //                     }));
+        //                     $.each(userData, function (index, pic) {
+        //                         user_pic.append($('<option>', {
+        //                             value: pic.id,
+        //                             text: pic.name,
+        //                             data: {picUrl:pic.picUrl},
+        //             user: pic,
+        //         }));
+        //     });
+        // });
 
-        $.get('api/user/list', function (userData) {
-            data = userData; // Set the data array with the retrieved user data
+         let project = [];
+            $.get('api/issue/clients', function (projectData) {
+                project = projectData; // Set the data array with the retrieved user data
 
-            const user_pic = $('#user_pic');
-            user_pic.empty();
-            user_pic.append($('<option>', {
-                value: '',
-                text: 'Select a User',
-                data: {picUrl: ''}, // Empty URL for placeholder
-            }));
-            $.each(userData, function (index, pic) {
-                user_pic.append($('<option>', {
-                    value: pic.id,
-                    text: pic.name,
-                    data: {picUrl: pic.picUrl},
-                    user: pic,
+                const client = $('#client');
+                client.empty();
+                client.append($('<option>', {
+                    value: '',
+                    text: 'Select Client',
+                    // data: {picUrl: ''}, // Empty URL for placeholder
                 }));
+                $.each(projectData, function (index, client) {
+                    client.append($('<option>', {
+                        value:  client.id,
+                        text: client.name,
+                        data: {picUrl:client.picUrl},
+                        user: client,
+                    }));
+                });
             });
-        });
 
 
         $('#addIssue').on('click', async function () {
@@ -400,6 +428,7 @@
             const responsible_party = $('#responsible_party').val();
             const issue_category = $('#issue_category').val();
             const selectedUserId = $('#user_pic').val();
+            const client = $('#client').val();
 
 
             if (
@@ -411,20 +440,23 @@
                 direct_cause === "" ||
                 responsible_party === "" ||
                 issue_category === "" ||
-                selectedUserId === ""
+                selectedUserId === ""||
+                client === ""
             ) {
                 alert('Please fill in all the required fields.');
                 return;
             }
 
             // Find the selected user by their ID
-            const selectedUser = data.find(user => user.id == selectedUserId);
+            // const selectedUser = data.find(user => user.id == selectedUserId);
+            //
+            //
+            // if (!selectedUser) {
+            //     alert('Selected user data not found.');
+            //     return;
+            // }
 
-
-            if (!selectedUser) {
-                alert('Selected user data not found.');
-                return;
-            }
+            const clientUser = project.find(client => client.id == client);
 
 
             const uploaderId = getLoginUser.currentUser.id;
@@ -448,6 +480,7 @@
                 user_uploader: {
                     id : uploaderId
                 },
+                client: clientUser,
             };
 
             console.log('Request Data:', requestData);
