--- a/src/main/resources/templates/employees.html
+++ b/src/main/resources/templates/employees.html
@@ -47,8 +47,8 @@
                     data-header-style="headerStyle"
                     data-url="/api/user/list"
                     data-pagination="true"
-                    data-page-size="5"
-                    data-page-list="[5, 10, 20, 50, 100, 200]"
+                    data-page-size="10"
+                    data-page-list="[10, 25, 50, 100, all]"
             >
                 <thead class="thead-dark text-center text-white font-weight-bold text-uppercase bg-primary rounded shadow-sm p-3 mb-5">
                 <tr>
