--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="layout/layout">
+      layout:decorate="layout/layout" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
 </head>
@@ -129,8 +129,9 @@
 
                                         </div>
                                     </div>
-
+                                    <div sec:authorize="hasAnyRole('PROJECT_MANAGER','DEPARTMENT_HEAD','EMPLOYEE','FOC','CONTRACT')">
                                     <div
+
                                             class="row"
                                             style="margin-top: 20px"
                                     >
@@ -143,19 +144,24 @@
 
                                         </div>
                                     </div>
-                                    <div
-                                            class="row"
-                                            style="margin-top: 20px"
-                                    >
+                                    </div>
+                                    <div sec:authorize="hasAnyRole('PROJECT_MANAGER','DEPARTMENT_HEAD','EMPLOYEE','FOC','CONTRACT')">
                                         <div
-                                                class="col-lg-3 col col-md-4 label"
-                                        >
-                                            Project Count
-                                        </div>
-                                        <div class="col-lg-9 col col-md-8" id="projectCount">
 
+                                                class="row"
+                                                style="margin-top: 20px"
+                                        >
+                                            <div
+                                                    class="col-lg-3 col col-md-4 label"
+                                            >
+                                                Project Count
+                                            </div>
+                                            <div class="col-lg-9 col col-md-8" id="projectCount">
+
+                                            </div>
                                         </div>
                                     </div>
+
                                 </div>
 
                                 <div
