Tasks save and avatar

--- a/src/main/resources/templates/project.html
+++ b/src/main/resources/templates/project.html
@@ -829,8 +829,7 @@
 
             const img = document.createElement("img");
             img.src =
-                "https://source.unsplash.com/random/200x200?sig=" +
-                task.id; // Assuming you want to change the image based on task.id
+                "/images/avatars/employee_avatar.svg"; // Assuming you want to change the image based on task.id
             img.classList.add("img-fluid", "rounded-circle");
             img.alt = "";
             img.style.width = "30px";
@@ -948,7 +947,7 @@
                     ${value}
                 </div>
                 <div class="col d-flex justify-content-between align-items-center">
-                    <img src="https://source.unsplash.com/random/200x200?sig=1" class="img-fluid rounded-circle" alt="" style="width: 30px;">
+                    <img src="/images/avatars/employee_avatar.svg" class="img-fluid rounded-circle" alt="" style="width: 30px;">
                 </div>
             `;
 
