--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -273,13 +273,7 @@
                                         </div>
 
                                         <div class="text-center">
-                                            <button
-                                                    type="submit"
-                                                    class="btn btn-primary"
-                                                    id="changePasswordBtn"
-                                            >
-                                                Change Password
-                                            </button>
+                                            <button type="submit" class="btn btn-primary" id="changePasswordBtn">Change Password</button>
                                         </div>
                                     <!-- End Change Password Form -->
                                     <!-- Add a full-page loading overlay -->
